tests/golden/type_errors/generic_lambda_argument_mismatch.cd
let identity = fun<T>(value: T): T { return value; };
identity<number>("bad");
