tests/golden/type_errors/generic_lambda_argument_mismatch.err
Type error at 2:23: argument 1 expects number, got string
  identity<number>("bad");
                        ^
